# open-intercom

./: App.tsx  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/openintercommobile/: AudioEngineModule.java  AudioEnginePackage.java  AudioForegroundService.java  MainActivity.kt  MainApplication.kt  OpusCodec.java
android/app/src/main/jni/: CMakeLists.txt  opus_jni.c
android/app/src/main/res/values/: strings.xml
ios/: AudioEngine.m  AudioEngine.swift  OpenIntercomMobile-Bridging-Header.h  Podfile  build-opus.sh
ios/OpenIntercomMobile/: AppDelegate.mm  AudioEngine.m  Info.plist  LaunchScreen.storyboard  OpenIntercomMobile-Bridging-Header.h  OpusHelper.h
ios/OpenIntercomMobile.xcodeproj/: project.pbxproj
ios/OpenIntercomMobile.xcodeproj/xcshareddata/xcschemes/: OpenIntercomMobile.xcscheme
ios/OpenIntercomMobile.xcworkspace/: contents.xcworkspacedata
ios/OpenIntercomMobileTests/: OpenIntercomMobileTests.m
src/components/: ChannelGroupSelector.tsx  ChannelList.tsx  SettingsModal.tsx
src/constants/: theme.ts
src/screens/: IntercomScreen.tsx  LoginScreen.tsx  PeopleScreen.tsx
src/services/: .WebSocketService.ts.swp  AudioService.ts  WebSocketService.ts
